--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 /*variable couleur , je metterais au propre apres*
 
 
+
 /* Sidebar styles */
 .sidebar {
     width: 250px;
@@ -8,7 +9,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #3c456b; 
+    background-color: #23468C; 
     padding: 1rem;
     transition: width 0.3s, padding 0.3s;
     z-index: 2;
@@ -112,7 +113,7 @@
 /* Centrer le titre principal et lui donner une couleur moderne */
 .main-title {
     text-align: center;
-    color: #1E90FF; 
+    color: #0F7CBF; 
     font-size: 2rem;
     margin-bottom: 1rem;
 }
@@ -227,3 +228,83 @@
     overflow: hidden;
 }
 
+body {
+    font-family: "Lato", sans-serif;
+    margin: 0;
+    background-color: #F7F7F7;
+}
+
+.header {
+    background-color: #65A637;
+    height: 288px;
+    padding: 16px 0 0 0;
+}
+
+.header-emoji {
+    font-size: 50px;
+    margin: 0 auto;
+    text-align: center;
+    display: block;
+    width: 50px;
+    height: 50px;
+}
+
+.header-title {
+    color: #FFFFFF;
+    font-size: 48px;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.header-description {
+    color: #CFCFCF;
+    margin: 4px auto;
+    text-align: center;
+    max-width: 384px;
+}
+
+.wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1024px;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin-top: 32px;
+}
+
+.card {
+    margin-bottom: 24px;
+    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
+}
+
+.menu {
+    display: flex;
+    flex-wrap: wrap; /* Allow items to wrap to the next line if necessary */
+    justify-content: space-evenly;
+    align-items: center; /* Center items vertically */
+    padding: 24px;
+    margin: -80px auto 0 auto;
+    background-color: #FFFFFF;
+    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
+}
+
+.Select-control {
+    width: 256px;
+    height: 48px;
+}
+
+.Select--single>.Select-control .Select-value,
+.Select-placeholder {
+    line-height: 48px;
+}
+
+.Select--multi .Select-value-label {
+    line-height: 32px;
+}
+
+.menu-title {
+    margin-bottom: 6px;
+    font-weight: bold;
+    color: #079A82;
+}
