--- a/assets/style.css
+++ b/assets/style.css
@@ -704,7 +704,69 @@ body {
 
 
 /* Responsive pour les petits écrans */
+
+ 
+
+
+
+
+
+/* Sidebar en mode replié pour les écrans tablette (768px) et mobile (480px) */
 @media (max-width: 768px) {
+    .sidebar {
+        width: 80px;
+        padding: 1rem 0.5rem;  /* Réduit le padding en mode replié */
+    }
+
+    /* Cache le texte du titre */
+    #sidebar-title {
+        opacity: 0;
+        margin-left: -10px; /* Réduit l'espace pour compenser */
+    }
+
+    /* Cache le texte des liens */
+    .nav-link span {
+        opacity: 0;
+    }
+
+    /* Modifie le style du lien actif */
+    .nav-link.active {
+        background-color: transparent;
+    }
+
+    .nav-link.active {
+       
+        background-color: transparent; /* Pas de fond lorsque la sidebar est repliée */
+     }
+     
+
+     
+     .sidebar .nav-link span {
+         opacity: 0;  /* Masque le texte en mode replié */
+         transition: opacity 0.3s;
+     }
+     
+     
+     .sidebar .nav-link.active {
+         background-color: transparent; /* Pas de fond lorsque la sidebar est repliée */
+     }
+     
+     
+     .nav-link:hover {
+         background-color: #3c3c3c; 
+         border-radius: 4px; 
+     }
+     
+     /* Réduire le style actif en mode replié */
+     .sidebar .nav-link.active i {
+         color: #ffd700; 
+     }
+     .page-content {
+        margin-left: 80px;
+     
+    }
+
+    
     #pagePrediction .field-group {
         width: 100%;
     }
