--- a/assets/style.css
+++ b/assets/style.css
@@ -122,25 +122,6 @@
 /* Statistiques */
 .stats-section {
     display: flex;
-    justify-content: space-between;
-    padding: 1rem 0;
-}
-
-/* Définition de l'animation fade-in-up */
-@keyframes fadeInUp {
-    0% {
-        opacity: 0;
-        transform: translateY(20px);
-    }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-/* Styles par défaut pour les grands écrans */
-.stats-section {
-    display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 1rem; /* Espace entre les blocs */
@@ -155,15 +136,24 @@
     background: linear-gradient(135deg, #e0f7e0, #fce4d6);
     
     /* Animation */
-    opacity: 0; 
-    animation: fadeInUp 0.6s ease-out forwards;
-    animation-delay: 0.2s;
-    
+    opacity: 0;
+    animation: fadeInCard 0.6s ease-out forwards;
+    /* Chaque bloc a un délai d'animation progressif défini en ligne */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
+
+.stat-photo {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-bottom: 0.5rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+
 
 .stat-block i {
     margin-right: 0.5rem;
@@ -186,13 +176,19 @@
 }
 
 
-
 /* Texte */
-.text-video-section h3{
+.text-video-section h3, .title3{
     color: #1b3d5f; /* Bleu moderne */
     font-size: 1.5rem;
     margin-bottom: 1rem;
  
+}
+
+.title3{
+    text-align: center;
+    margin-top: 1rem;
+ 
+
 }
 
    
@@ -355,6 +351,7 @@ body {
     margin: 10px;
     border-radius: 15px;
     height: auto;
+    animation: fadeInCard 0.6s ease-out forwards;
 }
 
 #no-data-message {
@@ -407,6 +404,7 @@ body {
     display: flex;
     justify-content: space-between; /* Espace entre chaque KPI */
     padding: 1rem 0;
+    animation: fadeInCard 0.6s ease-out forwards;
 }
 
 /* Carte KPI */
@@ -421,7 +419,6 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     color: #fff;
     font-weight: bold;
-    animation: fadeInUp 0.6s ease-out forwards;
     text-align: center;
 }
 
@@ -511,7 +508,7 @@ body {
     color: #333;
 }
 
-/* Style pour un bouton moderne */
+
 .apply-filters-button {
     background-color: #007BFF;
     color: white;
@@ -531,6 +528,7 @@ body {
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    animation: fadeInCard 0.6s ease-out forwards;
 }
 
 /* Section de la table de données */
@@ -540,6 +538,7 @@ body {
     background-color: #f7f7f7;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    animation: fadeInUp 0.6s ease-out forwards;
 }
 
 /* Bouton d'export CSV */
@@ -599,6 +598,7 @@ body {
     grid-template-columns: repeat(2, 1fr); /* Deux colonnes de largeur égale */
     gap: 1rem; /* Espace entre les graphiques */
     padding: 1rem;
+    animation: fadeInCard 0.6s ease-out forwards;
 }
 
 /* Sur petits écrans, affichez chaque graphique sur une seule colonne */
@@ -777,7 +777,7 @@ body {
     }
 
     .stat-block {
-        width: 45%; /* Réduit la largeur des blocs pour qu’ils tiennent deux par ligne */
+        width: 45%; 
         margin-bottom: 1rem;
     }
 
@@ -804,5 +804,30 @@ body {
     .stat-block {
         width: 90%; /* Largeur presque pleine pour chaque bloc */
         margin-bottom: 1rem;
+    }
+}
+
+
+/*Animation */
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/* Définition de l'animation fade-in-up pour une apparition progressive */
+@keyframes fadeInCard {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
