--- a/assets/style.css
+++ b/assets/style.css
@@ -215,6 +215,7 @@
 /* Colonne de vidéo à droite */
 .text-section-right {
     width: 45%;  
+    height: 100%;
     padding-bottom: 2rem;
     padding-top: 2rem;
 }
